--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,16 @@ header{
     align-items: center;
     padding: 20px 70px 20px 50px;
     font-size: 18px;
+    width: 100%;
     height: 10vh;
-    position: fixed;
-    top:0 ;
-    right: 0;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: white;
+}
+
+.menu-sanduiche{
+    display: none;
 }
 
 nav{
@@ -84,3 +90,160 @@ button{
     font-size: 24px;
 }
 
+.seçao2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    
+}
+
+.seçao2 h2{
+    font-size: 64px;
+}
+.container-pai{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 30px;
+    padding: 50px;
+}
+
+.container-itens img{
+    width: 100%;
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+
+}
+
+.banner{
+    display: flex;
+    flex-direction: column;
+    width: 407px;
+    background-color: #F4F4F4;
+    height: 550px;
+    border-radius: 12px;
+    gap: 10px;
+    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
+}
+
+.descriçao{
+    display: flex;
+    flex-direction: column;
+    padding: 25px 35px; 
+    gap: 10px;
+    height: 100%;
+    justify-content: space-between;
+} 
+
+.descriçao a{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    color: white;
+    background-color: #33BB69;
+    width: 100%;
+    height: 50px;
+    border-radius: 12px;
+}
+
+.conteudo{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.conteudo p{
+    color: rgba(0, 0, 0, 0.753);
+}
+
+footer{
+    background-color: #171717;
+    color: white;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items:center;
+    padding-top: 45px;
+    padding-bottom: 50px;
+    gap: 35px;
+}
+
+.integrantes h4{
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.informaçoes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 200px;
+}
+
+.integrantes{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    gap:10px;
+}
+
+.integrantes span{
+    color: rgba(255, 255, 255, 0.753);
+}
+
+.redes a{
+    width: 30px;
+    height: 40px;
+}
+
+.checkpoint{
+     color: rgba(255, 255, 255, 0.5);
+}
+
+@media (max-width: 460px){
+    header{
+        padding:20px;
+    }
+    nav{
+        display: none;
+    }
+
+    .menu-sanduiche{
+        display: block;
+    }
+
+    .texto{
+        padding: 35px;
+    }
+    
+    .banner{
+        width: 100%;
+    }
+    
+    .seçao2{
+        background-color: #E51B3E;
+    }
+    
+    .informaçoes{
+        display: flex;
+        flex-direction: column;
+        align-content: flex-start;
+        justify-content: flex-start;
+        gap: 20px;
+        width: 100%;
+        padding: 0;
+    }
+
+    .integrantes{
+        width: 100%;
+        align-content: flex-start;
+        justify-content: flex-start;
+        padding: 0;
+    }
+}
