--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 header{
     display: flex;
     justify-content: space-between;
@@ -17,6 +20,7 @@ header{
     position: sticky;
     top: 0;
     background-color: white;
+    box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
 }
 
 .menu-sanduiche{
@@ -25,6 +29,15 @@ header{
 
 nav{
     display: flex;
+    transition: 1s;
+}
+
+header li{
+    transition: all 0.4s;
+}
+
+header li:hover{
+    transform: rotate(360deg);
 }
 
 ul{
@@ -88,6 +101,13 @@ button{
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
+    transition: 1s;     
+}
+
+button:hover{
+    background-color:white;
+    color: #33BB69;
+    transform: scale(1.2)
 }
 
 .seçao2{
@@ -109,7 +129,7 @@ button{
     justify-content: center;
     align-items: center;
     width: 100%;
-    gap: 30px;
+    gap: 50px;
     padding: 50px;
 }
 
@@ -117,7 +137,7 @@ button{
     width: 100%;
     border-top-right-radius: 12px;
     border-top-left-radius: 12px;
-
+    
 }
 
 .banner{
@@ -125,10 +145,15 @@ button{
     flex-direction: column;
     width: 407px;
     background-color: #F4F4F4;
-    height: 550px;
+    height: 600px;
     border-radius: 12px;
     gap: 10px;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
+    transition: 1s;
+}
+
+.banner:hover{
+    transform:scale(0.9);
 }
 
 .descriçao{
@@ -161,6 +186,16 @@ button{
     color: rgba(0, 0, 0, 0.753);
 }
 
+.abrir{
+    transition: all 1s;
+}
+
+.abrir:hover{
+    background-color:  #222222;
+    color: #33BB69;
+    transform: scale(0.8)
+}
+
 footer{
     background-color: #171717;
     color: white;
@@ -191,15 +226,34 @@ footer{
     align-items: center;
     flex-direction: column;
     gap:10px;
+    transition: 1s;
+}
+
+.integrantes:hover{
+    transform:scale(1.2);
+    border: #626262;
 }
 
 .integrantes span{
     color: rgba(255, 255, 255, 0.753);
 }
 
+.redes{
+    display: flex;
+    gap: 10px;
+}
+
 .redes a{
     width: 30px;
     height: 40px;
+    transition: 1s;
+    animation:pulsar 0.5s infinite alternate;
+}
+
+@keyframes pulsar{
+    to{
+        transform:scale(1.2);
+    }
 }
 
 .checkpoint{
