--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ a{
 }
 
 .seçao1{
-    background-image: url(/img/background.jpg);
+    background-image: url(https://conteudo.imguol.com.br/c/entretenimento/68/2019/01/07/os-10-melhores-jogos-de-2018-na-opiniao-do-uol-jogos-1546887965085_v2_1920x1080.jpg);
     width: 100%;
     height: 90vh;
 }
