--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ header{
     top: 0;
     background-color: white;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
 
 .menu-sanduiche{
@@ -150,6 +151,7 @@ button:hover{
     gap: 10px;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
     transition: 1s;
+    z-index: 1;
 }
 
 .banner:hover{
