--- a/css/login.css
+++ b/css/login.css
@@ -55,6 +55,8 @@ input{
     height: 60px;
     border-radius: 12px;
     border: 1px solid #A4A4A4;
+    padding-left: 15px;
+    font-size: 20px;
 }
 
 form{
